# o7-ai

./: .gitignore  Anchor.toml  README.md
app/: package-lock.json
app/src/app/: layout.tsx  page.tsx
app/src/app/agents/: page.tsx
app/src/app/profile/: page.tsx
app/src/app/tasks/: page.tsx
app/src/components/: Nav.tsx  WalletProvider.tsx
app/src/lib/: brain_token.json  city_registry.json  programs.ts  task_marketplace.json  useAnchor.ts
programs/brain-token/: Cargo.toml
programs/brain-token/src/: lib.rs
programs/city-registry/: Cargo.toml
programs/city-registry/src/: lib.rs
programs/staking-vault/: Cargo.toml
programs/staking-vault/src/: lib.rs
programs/task-marketplace/: Cargo.toml
programs/task-marketplace/src/: lib.rs
tests/: o7-ai.ts
warpath/: .env.example  config.py  conftest.py  main.py  pyproject.toml
warpath/data/: candle_builder.py  feed.py  indicators.py
warpath/execution/: drift_client.py  executor.py  order_manager.py
warpath/monitoring/: telegram_bot.py  telemetry.py
warpath/risk/: degraded_mode.py  gate_manager.py  sizing.py  watcher.py
warpath/signals/: bollinger.py  composite.py  dual_thrust.py  heikin_ashi.py  parabolic_sar.py  regime.py
warpath/tests/: conftest.py  test_composite.py  test_degraded.py  test_executor.py  test_gates.py  test_order_manager.py  test_signals.py  test_sizing.py  test_watcher.py
